--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,9 +25,10 @@ body {
   }
   
   main {
-    padding: 100px 80px;
+    padding: 280px 80px;
     background-image:url("olympic.png");
     background-color:rgba(255,255,255,0.8);
+    background-blend-mode:lighten;
     background-size:cover;
   }
   
@@ -97,8 +98,8 @@ body {
   footer {
     background-color: #2f5167;
     color: #fff;
-    height: 120px;
-    padding: 40px;
+    height: 150px;
+    padding: 20px;
   }
   
   .footer-logo {
